router Link fixed by sanjay rathore

--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -6,10 +6,10 @@
             </div>
             <nav>
                 
-                <a routerlink="/">HOME</a>
-                <a routerlink="signup">SIGNUP</a>
-                <a routerlink="login">LOGIN</a>
-                <a routerlink="publish">PUBLISHbook</a>
+                <a routerLink="/">HOME</a>
+                <a routerLink="signup">SIGNUP</a>
+                <a routerLink="login">LOGIN</a>
+                <a routerLink="publish">PUBLISHbook</a>
                 
             </nav>
 
