fixed the navigation by ishika gupta

--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -7,9 +7,9 @@
             <nav>
                 
                 <a routerLink="/">HOME</a>
-                <a routerLink="signup">SIGNUP</a>
-                <a routerLink="login">LOGIN</a>
-                <a routerLink="publish">PUBLISHbook</a>
+                <a routerLink="/signup">SIGNUP</a>
+                <a routerLink="/login">LOGIN</a>
+                <a routerLink="/publish">PUBLISHbook</a>
                 
             </nav>
 
