signup and login form created by divya

--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<body>
+    
+
+<div class="loginbox">
+    <h1>Login Here</h1>
+    <form>
+        <p>Username</p>
+        <input type="text" name="" placeholder="Enter username" >
+        <p>Password</p>
+        <input type="password" name="" placeholder="Enter password">
+        <input type="submit" name="" value="login">
+        <a href="#">Forgot password ?</a><br>
+        <a href="#">Don't have an account ?</a>
+    </form>
+</div>
+</body>
