--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -1,1 +1,27 @@
-<p>signup works!</p>
+<body>
+    <div class="regform"><h1>Registration Form</h1></div>
+    <div class="main">
+        <form>
+            <div id="name">
+                <h2 class="name">Name</h2>
+                <input  class="firstname" placeholder="firstname" type="text" name="first_name"><br>
+                <label class="firstlable">first name</label>
+                <input  class="lastname" placeholder="lastname" type="text" name="last_name"><br>
+                <label class="lastlable">last name</label>
+            </div>
+            <h2 class="name">Email</h2>
+            <input class="email" placeholder="email" type="email" name="email">
+            <h2 class="name">Password</h2>
+            <input class="password" placeholder="password" type="password" name="password">
+            <h2 class="name">Phone</h2>
+            <input class="code" placeholder="code" type="number" name="area_code">
+            <label class="area-code">Area Code</label>
+            <input class="number" placeholder="phone number" type="number" name="phone">
+            <label class="phone-number">Phone number</label>
+            <button type="submit">Register</button>
+
+
+
+        </form>
+    </div>
+</body>
