--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -8,19 +8,22 @@ body{
     font-family: sans-serif;
     margin-top: 40px ;
     
+    
 }
 .loginbox{
     width: 320px;
     height: 420px;
-    background: #000;
+    background: #262626;
     color: #fff;
     top: 50%;
     left: 50%;
-    position: absolute;
+    position: relative;
     transform: translate(-50%,-50%);
     box-sizing: border-box;
     padding: 70px 30px;
-    margin-top: 20px;
+    margin-top: 230px;
+    margin-bottom: -190px;
+    
 }
 h1{
     margin: 0;
@@ -37,7 +40,7 @@ h1{
     width: 100%;
     margin-bottom: 20px;
 }
-.loginbox input[type="text"], input[type="password"]{
+.loginbox input[type="email"], input[type="password"]{
     border: none;
     border-bottom: 1px solid #fff;
     background: transparent;
