forms created in front and api given in backend along with database connectivity by divya

--- a/front/src/app/dashboardheader/dashboardheader.component.html
+++ b/front/src/app/dashboardheader/dashboardheader.component.html
@@ -6,8 +6,8 @@
             </div>
             <nav>
                 
-                <a routerLink="/">PUBLISHbookHERE</a>
-                <a routerLink="/">logout</a>
+                <a routerLink="/publishbook">PUBLISHbookHERE</a>
+                <a routerLink="/logout">logout</a>
     
                 
             </nav>
