--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -9,15 +9,13 @@ body{
     margin-top: 40px ;
     
     
+    
+    
 }
 .loginbox{
     width: 320px;
     height: 420px;
-<<<<<<< HEAD
     background: #262626;
-=======
-    background: #434343;
->>>>>>> da1fc2324791b25a22ae7d541d1e45498582ce26
     color: #fff;
     top: 50%;
     left: 50%;
@@ -27,6 +25,7 @@ body{
     padding: 70px 30px;
     margin-top: 230px;
     margin-bottom: -190px;
+    border-radius: 6px 6px;
     
 }
 h1{
