--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,3 +1,8 @@
 <div class="container">
-    
+    <footer>
+        <nav>
+            <a routerLink='/contact'>Contact</a>
+            <a routerLink='/about'>About</a>
+        </nav>
+    </footer>
 </div>
