fixed contact working by ishika

--- a/front/src/app/about/about.component.html
+++ b/front/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="outer">
+    <div class="inner">
+        <h4>PassTheBook Story</h4>
+        <p></p>
+    </div>
+</div>
