--- a/front/src/app/contact/contact.component.html
+++ b/front/src/app/contact/contact.component.html
@@ -1,3 +1,9 @@
-<div class="contain">
-
+<div class="out">
+    <div class="inner">
+        <p id="one">Need Help!!!</p>
+        <p id="two">Contact us Anytime</p>
+        <p id="three">Mail your query at <b>
+            xyz@gmail.com
+        </b></p>
+    </div>
 </div>
