added some text in about component by ishika

--- a/front/src/app/about/about.component.html
+++ b/front/src/app/about/about.component.html
@@ -1,6 +1,9 @@
 <div class="outer">
     <div class="inner">
         <h4>PassTheBook Story</h4>
-        <p></p>
+        <p>The books or novels we purchase to read, are kept in a shelf after we read. They just occupy space
+            in our shelves. So, we thought we to keep them as show piece? Let's read it and circulate it on the
+            internet for others to read it and have some fun.
+        </p>
     </div>
 </div>
