added category section in the home page by Ishika Gupta

--- a/front/src/app/about/about.component.html
+++ b/front/src/app/about/about.component.html
@@ -1,9 +1,16 @@
 <div class="outer">
     <div class="inner">
-        <h4>PassTheBook Story</h4>
-        <p>The books or novels we purchase to read, are kept in a shelf after we read. They just occupy space
-            in our shelves. So, we thought we to keep them as show piece? Let's read it and circulate it on the
-            internet for others to read it and have some fun.
-        </p>
+        <h1>PassTheBook &nbsp; Story</h1>
+        <div class="content">
+            <p>The books or novels one purchases to read, are kept in a shelf after they have read. They just occupy 
+                space in our shelves. So, we thought we to keep them as show piece? Let's read it and circulate it 
+                on the internet for others to read it and have some fun.
+            </p>
+            <p>We are here to help you guys to make circulating easy. Register on the website and publish your
+                book by following simple steps: Take a snap of your book, post it here, give a discription about 
+                it along with your details and done. Now whoever wants to read it can directly contact you and 
+                pick it up from you.
+            </p>
+        </div>
     </div>
 </div>
