--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,1 +1,41 @@
-<p>home works!</p>
+<div class="out">
+    <h1>Categories</h1>
+    <div class="in">
+        <div class="child one">
+            <img src="../../assets/mystery.jpg" alt="Not Dead Yet" style="width: 100%; height: 100%;">
+            <h2>Mystery</h2>
+        </div>
+        <div class="child two">
+            <img src="../../assets/thriller.jpg" alt="The River" style="width: 100%; height: 100%;">
+            <h2>Thriller</h2>
+        </div>
+        <div class="child three">
+            <img src="../../assets/action.jpg" alt="Then She Was Gone" style="width: 100%; height: 100%;">
+            <h2>Action</h2>
+        </div>
+        <div class="child four">
+            <img src="../../assets/romance.jpg" alt="Next To Never" style="width: 100%; height: 100%;">
+            <h2>Romance</h2>
+        </div>
+        <div class="child five">
+            <img src="../../assets/fiction.jpg" alt="Complete Me" style="width: 100%; height: 100%;">
+            <h2>Fiction</h2>
+        </div>
+        <div class="child six">
+            <img src="../../assets/non-fiction.jpg" alt="Gratitude Diaries" style="width: 100%; height: 100%;">
+            <h2>Non-Fiction</h2>
+        </div>
+        <div class="child seven">
+            <img src="../../assets/fantasy.jpg" alt="Twilight" style="width: 100%; height: 100%;">
+            <h2>Fantasy</h2>
+        </div>
+        <div class="child eight">
+            <img src="../../assets/horror.jpg" alt="The Toll" style="width: 100%; height: 100%;">
+            <h2>Horror</h2>
+        </div>
+        <div class="child nine">
+            <img src="../../assets/humour.jpg" alt="The Silver Ladies of Penny Lane" style="width: 100%; height: 100%;">
+            <h2>Humour</h2>
+        </div>
+    </div>
+</div>
