login issue solved and logout component is  replaced by logout button n is working by divya

--- a/front/src/app/dashboardheader/dashboardheader.component.html
+++ b/front/src/app/dashboardheader/dashboardheader.component.html
@@ -7,8 +7,10 @@
             <nav>
                 
                 <a routerLink="/publishbook">PUBLISHbookHERE</a>
-                <a routerLink="/logout">logout</a>
-    
+                
+                <a routerLink="/latestbookpublished">LATESTbooks</a>
+                  
+                <button (click)="logout()">LOGOUT</button>
                 
             </nav>
 
