--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
 <app-dashboardheader></app-dashboardheader>
-<app-latestbookpublished></app-latestbookpublished>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
