--- a/front/src/app/dashboardheader/dashboardheader.component.css
+++ b/front/src/app/dashboardheader/dashboardheader.component.css
@@ -41,4 +41,17 @@ header{
         margin: 0 10px;
         color: peru;
     }
-
+    button{
+       
+       color: white;
+       cursor: pointer;
+       border-radius: 40px;
+       background-color:#3BAF9F;
+       border: 2px solid #366473;
+       padding-top: -20px;
+       padding-bottom: -20px;
+        font-size: 16px;
+        width: 90px;
+        }
+    
+     
