--- a/front/src/app/footer/footer.component.css
+++ b/front/src/app/footer/footer.component.css
@@ -1,7 +1,8 @@
 .container{
     width: 100%;
     height: 200px;
-    background-color: #232323;
+    background-color: #262626;
+    margin-top: 20px;
 }
 footer nav{
     float: left;
