--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -25,8 +25,9 @@ body{
     box-sizing: border-box;
     padding: 70px 30px;
     margin-top: 230px;
-    margin-bottom: -190px;
+    margin-bottom: -210px;
     border-radius: 6px 6px;
+
     
 }
 h1{
@@ -58,7 +59,7 @@ h1{
     border: none;
     outline: none;
     height: 40px;
-    background-color: #fb2525;
+    background-color:lightskyblue;
     color: #fff;
     border-radius: 20px;
 
