--- a/front/src/app/footer/footer.component.css
+++ b/front/src/app/footer/footer.component.css
@@ -1,8 +1,12 @@
-.container{
+.out{
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-color: #262626;
     margin-top: 20px;
+}
+.in{
+    width: 100%;
+    height: 100%;
 }
 footer nav{
     float: left;
