--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,8 +1,10 @@
-<div class="container">
-    <footer>
-        <nav>
-            <a routerLink='/contact'>Contact</a>
-            <a routerLink='/about'>About</a>
-        </nav>
-    </footer>
+<div class="out">
+    <div class="in">
+        <footer>
+            <nav>
+                <a routerLink='/contact'>Contact</a>
+                <a routerLink='/about'>About</a>
+            </nav>
+        </footer>
+    </div>
 </div>
