--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -2,7 +2,6 @@
 {
     width: 100%;
     height: 1400px;
-    /* border: 1px solid black; */
 }
 .out h1
 {
@@ -15,7 +14,6 @@
 {
     width: 100%;
     height: 1000px;
-    /* border: 2px solid green; */
     display: grid;
     grid-template-columns: 300px 300px 300px;
     grid-template-rows: 400px 400px 400px;
@@ -30,4 +28,5 @@
 .child h2
 {
     margin-left: 100px;
+    line-height: 60px;
 }
