--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -3,10 +3,10 @@
     width: 100%;
     height: 1400px;
     /* border: 1px solid black; */
+
 }
 .out h1
-{
-    margin-top: 20px;
+{   margin-top: 20px;
     margin-left: 100px;
     text-shadow: 1px 1px #989898,
                  2px 2px #a2a2a2;
