--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,3 +1,32 @@
+<div class="backout">
+    <div class="backin">
+        <img src="../../assets/background1.jpg" alt="BackgroundText" style="width: 100%; height: 100%;">
+    </div>
+</div>
+
+
+
+
+
+<div class="heading">
+    <h1>BEST SELLERS</h1>
+
+</div>
+<div class="test1">
+    <div class="test2">
+        <img src="../../assets/Slider2.jpg" alt="Background" style="width: 100%; height: 100%;">
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
 <div class="out">
     <h1>Categories</h1>
     <div class="in">
