--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -2,13 +2,22 @@
     margin: 0;
     padding: 0;
 }
+.bg{
+    
+    border: 1px solid transparent;
+    background-image: url('../../assets/LoginBG1.jpg');
+    height: -webkit-fill-available;
+    margin-bottom: -20px;
+}
+
 body{
         background-size: cover;
     background-position: center;
     font-family: sans-serif;
-    margin-top: 40px ;
+    height: 500px;
+    /* margin-top: 40px ; */
     
-    
+
     
     
 }
@@ -25,7 +34,7 @@ body{
     box-sizing: border-box;
     padding: 70px 30px;
     margin-top: 230px;
-    margin-bottom: -210px;
+    margin-bottom: -200px;
     border-radius: 6px 6px;
 
     
