--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <body>
+    <div class="bg">
     <div class="loginbox">
     <h1>Login Here</h1>
     <form #f="ngForm">
@@ -10,5 +11,6 @@
         <a href="#">Forgot password ?</a><br>
         <a href="#">Don't have an account ?</a>
     </form>
+</div>
 </div>
 </body>
