--- a/front/src/app/signup/signup.component.css
+++ b/front/src/app/signup/signup.component.css
@@ -2,12 +2,15 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     background-position: center;
     background-size: cover;
     font-family: sans-serif;
     margin-top: 20px;
+    background-image: url('../../assets/LoginBG1.jpg');
 }
+
 .regform{
     width: 800px;
     background-color: rgb(0,0,0,0.6);
