--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -5,9 +5,10 @@
 .bg{
     
     border: 1px solid transparent;
-    background-image: url('../../assets/LoginBG1.jpg');
+    background-image: url('../../assets/LoginBG3.jpg');
     height: -webkit-fill-available;
     margin-bottom: -20px;
+    background-size: 100% 100%;
 }
 
 body{
