--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -9,7 +9,9 @@
     height: -webkit-fill-available;
     margin-bottom: -20px;
     background-size: 100% 100%;
+    
 }
+
 
 body{
         background-size: cover;
@@ -26,7 +28,7 @@ body{
     width: 320px;
     height: 420px;
 
-    background: #262626;
+    background:   rgb(0,0,0,0.6);
     color: #fff;
     top: 50%;
     left: 50%;
