removed image from home and corrected contact info by ishika gupta

--- a/front/src/app/contact/contact.component.html
+++ b/front/src/app/contact/contact.component.html
@@ -2,8 +2,11 @@
     <div class="inner">
         <p id="one">Need Help!!!</p>
         <p id="two">Contact us Anytime</p>
-        <p id="three">Mail your query at <b>
-            xyz@gmail.com
-        </b></p>
+        <p id="three">Mail your query at </p>
+        <p id="three"><b>
+            divyachundawat865@gmail.com <br />
+            ishikagupta321999@gmail.com
+        </b>
+        </p>
     </div>
 </div>
