country-state-city api set and check css of latestbookpublished

--- a/front/src/app/latestbookpublished/latestbookpublished.component.html
+++ b/front/src/app/latestbookpublished/latestbookpublished.component.html
@@ -9,7 +9,7 @@
     <p>TITLE:{{p.title}}</p>
     <p>PRICE:{{p.price}}</p>
     <p>NAME:{{p.fullname}}</p>
-    <p>CONTACT NUMBER:{{p.phonenumber}}</p>
+    <p>CONTACT NUMBER:{{p.number}}</p>
     <p>CONTACT MAIL:{{p.email}}</p>
     <p>CITY:{{p.city}}</p>
     <button (click)="sendReq(p)">sendRequest</button>
