added about story

--- a/front/src/app/about/about.component.html
+++ b/front/src/app/about/about.component.html
@@ -2,14 +2,20 @@
     <div class="inner">
         <h1>PassTheBook &nbsp; Story</h1>
         <div class="content">
-            <p>The books or novels one purchases to read, are kept in a shelf after they have read. They just occupy 
-                space in our shelves. So, we thought we to keep them as show piece? Let's read it and circulate it 
-                on the internet for others to read it and have some fun.
+            <p>
+                PassTheBook is an online marketplace for books and novels where you can uodate your old books
+                that you have read and are having no place to keep it and they are occupying unnecessary space
+                on the shelves of your home. So let's sell out the books that we have read and are not willing to
+                read it again.
             </p>
-            <p>We are here to help you guys to make circulating easy. Register on the website and publish your
-                book by following simple steps: Take a snap of your book, post it here, give a discription about 
-                it along with your details and done. Now whoever wants to read it can directly contact you and 
-                pick it up from you.
+            <p>
+                Why stack up the books you read only once? Let's share a story with someone else. This will help
+                the other to increase their knowledge and add up a bit of money in your pocket.
+            </p>
+            <p>
+                The charisma of PassTheBook is that it fills your shelves with books at an affordable price and
+                at the same time you can clean it up by selling the books that you have read and earn something
+                from it.
             </p>
         </div>
     </div>
