--- a/front/src/app/about/about.component.css
+++ b/front/src/app/about/about.component.css
@@ -1,7 +1,7 @@
 .outer
 {
     width: 100%;
-    height: 300px;
+    /* height: 500px; */
     display: flex;
     justify-content: center;
     background-color: #d3d3d3;
@@ -9,7 +9,7 @@
 .inner
 {
     width: 80%;
-    height: 250px;
+    /* height: 250px; */
     margin-top: 30px;
 }
 .inner h1
@@ -18,5 +18,5 @@
 }
 .content
 {
-    font-size: 18px;
+    font-size: 20px;
 }
