--- a/front/src/app/latestbookpublished/latestbookpublished.component.css
+++ b/front/src/app/latestbookpublished/latestbookpublished.component.css
@@ -7,7 +7,8 @@
         margin-top: 40px;
     }
     .item{
-        width: 100%;
+        width: 90%;
+        margin-left: 5%;
         height: 400px;
         box-shadow: 3px 4px 4px gray;
         margin-top: 40px;
