--- a/front/src/app/footer/footer.component.css
+++ b/front/src/app/footer/footer.component.css
@@ -1,6 +1,6 @@
 .out{
     width: 100%;
-    height: 100px;
+    height: 200px;
     background-color: #262626;
     margin-top: 20px;
 }
@@ -17,6 +17,13 @@ footer nav a{
     font-family: sans-serif;
     letter-spacing: 4px;
     font-size: 20px;
-    margin-left: 250px;
+    margin-left: 400px;
     color: #fff;
+}
+p{
+    color: #fff;
+}
+.copyright
+{
+    text-align: center;
 }
