--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,10 +1,16 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="out">
     <div class="in">
         <footer>
-            <nav>
-                <a routerLink='/contact'>Contact</a>
-                <a routerLink='/about'>About</a>
-            </nav>
+            <div class="content">
+                <nav>
+                    <a routerLink='/contact'>Contact</a>
+                    <a routerLink='/about'>About</a>
+                </nav>
+            </div>
+               <div class="copyright">
+                <p>PassTheBook@</p>
+               </div>
         </footer>
     </div>
 </div>
