--- a/front/src/app/latestbookpublished/latestbookpublished.component.css
+++ b/front/src/app/latestbookpublished/latestbookpublished.component.css
@@ -5,6 +5,7 @@
     }
     h1{
         margin-top: 40px;
+        margin-left: 350px;
     }
     .item{
         width: 90%;
@@ -23,6 +24,7 @@
         flex-wrap: wrap;
         padding: 50px;
         box-sizing: border-box;
+        
     }
     
 
