--- a/front/src/app/publishbook/publishbook.component.css
+++ b/front/src/app/publishbook/publishbook.component.css
@@ -12,12 +12,16 @@
 .inner{
     width: 40%;
     margin-left:  30% ;
+    font-weight: bold;
 }
 .heading{
     font-size: 50px;
     text-shadow: 1px 1px 4px #656565,
                  2px 2px 5px #727272,
                  3px 3px 6px #858585;
+    padding-top: 10px;
+    background-color: darkgray;
+    padding-left: 350px;
 }
 button{
     background-color: #3BAF9F;
@@ -34,4 +38,10 @@ button{
 }
 button:hover{
     background-color: #5390f5;
+}
+h3{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    
+    
 }
