--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -6,10 +6,11 @@
                 <nav>
                     <a routerLink='/contact'>Contact</a>
                     <a routerLink='/about'>About</a>
+                    <p>copy right @ PassTheBook 2020</p>
                 </nav>
             </div>
                <div class="copyright">
-                <p>PassTheBook@</p>
+                
                </div>
         </footer>
     </div>
