fixed the city name

--- a/front/src/app/publishbook/publishbook.component.html
+++ b/front/src/app/publishbook/publishbook.component.html
@@ -49,7 +49,7 @@
        
         <h3>City</h3>
         <select #cityref="ngModel" [(ngModel)]="cityprop"   name="city">
-            <option *ngFor="let ctrs of cities" value="{{ctrs.id}}">{{ctrs.name}}</option>
+            <option *ngFor="let ctrs of cities" value="{{ctrs.name}}">{{ctrs.name}}</option>
         </select>
 
 
