--- a/front/src/app/publishbook/publishbook.component.css
+++ b/front/src/app/publishbook/publishbook.component.css
@@ -42,6 +42,10 @@ button:hover{
 h3{
     padding-bottom: 10px;
     padding-top: 10px;
-    
-    
+}
+.text{
+    height: 200px;
+    width: 500px;
+    padding-left: 30px;
+    border-radius: 10px;
 }
