--- a/front/src/app/publishbook/publishbook.component.html
+++ b/front/src/app/publishbook/publishbook.component.html
@@ -63,6 +63,8 @@
         <input #emailref="ngModel" [(ngModel)]="emailprop" type="email" name="email" placeholder="email">
         <h3>Date of uploading book</h3>
         <input #dateref="ngModel" [(ngModel)]="dateprop" type="date" name="date" placeholder="date">
+        <h3>DESCRIBE YOUR BOOK</h3>
+        <input class="text" #textarearef="ngModel" [(ngModel)]="textareaprop" type="text" placeholder="discription of your book" name="textarea"  >
         <button type="submit" (click)="publish()" >PUBLISH</button>
     </div>
   </div>
