--- a/front/src/app/latestbookpublished/latestbookpublished.component.html
+++ b/front/src/app/latestbookpublished/latestbookpublished.component.html
@@ -14,6 +14,8 @@
                 <p>CONTACT NUMBER:{{p.number}}</p>
                 <p>CONTACT MAIL:{{p.email}}</p>
                 <p>CITY:{{p.city}}</p>
+                <p>DESCRIPTION: {{p.text}}</p>
+                
                 <button (click)="sendReq()">sendRequest</button>
             </div>
         
