--- a/front/src/app/publishbook/publishbook.component.css
+++ b/front/src/app/publishbook/publishbook.component.css
@@ -43,7 +43,7 @@ h3{
     padding-bottom: 10px;
     padding-top: 10px;
 }
-.text{
+#t{
     height: 200px;
     width: 500px;
     padding-left: 30px;
